--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+@charset "UTF-8";a
 /*!
 * Start Bootstrap - Resume v7.0.6 (https://startbootstrap.com/theme/resume)
 * Copyright 2013-2023 Start Bootstrap
@@ -568,7 +568,7 @@ progress {
   padding-left: 0;
   list-style: none;
 }
-
+list
 .list-inline-item {
   display: inline-block;
 }
