--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -1,6 +1,6 @@
 .homebg {
     background-image: url('../img/TotK-Background.jpg');
-    background-position: top right;
+    background-position:top left;
 }
 h1 {
     color: ivory
