--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -1,26 +1,20 @@
 .homebg {
-    background-image: url('../img/TotK-Background.jpg');
-    background-position:top left;
+    background-image: url('/finalProject/startbootstrap-resume-gh-pages/img/TotK-Background.jpg');
 }
 h1 {
-    color: ivory
+    color: mediumspringgreen
 }
 body {
-    font-family:'Times New Roman', Times, serif;
-    font-size: xx-large;
+    font-family:'Courier New', Courier, monospace;
     font-weight: bolder;
+    color:rgb(2, 151, 94);
+    font-size: xx-large
 }
-.greenfont {
-    color: mediumspringgreen;
+.dashlabel{
+    color: black;
 }
-.ivoryfont {
-    color: ivory
-}
-.yellowfont{
-    color: khaki;
-}
-.bluefont {
-    color:deepskyblue;
+ul {
+    color:gray;
 }
 a {
     color: mediumspringgreen;
@@ -29,5 +23,19 @@ a {
 a:hover {
     text-decoration: wavy;
     font-weight: bold;
-    font-size: 38px;
+    font-size: 25px;
+}
+.header {
+    top: 5px;
+    text-align: center;
+    padding-top: 10px;
+}
+.videoposition {
+    text-align: center;
+}
+.footer {
+    bottom: 5px;
+    text-align: center;
+    height: 25px;
+    padding-bottom: 10px;
 }
