--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -1,4 +1,5 @@
 .homebg {
+    /* background-image: url('/finalProject/startbootstrap-resume-gh-pages/img/TotK-Background.jpg'); */
     background-image: url('/IS201-FinalProject/img/TotK-Background.jpg');
 }
 h1 {
