--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -9,7 +9,7 @@ body {
     font-family:'Courier New', Courier, monospace;
     font-weight: bolder;
     color:rgb(2, 151, 94);
-    font-size: xx-large
+    font-size: x-large
 }
 .dashlabel{
     color: black;
